solved layout bug

--- a/src/components/style/_DescriptionComponent.scss
+++ b/src/components/style/_DescriptionComponent.scss
@@ -2,10 +2,14 @@
   &-content {
     margin-top: 80px;
 
-    p {
-      &:first-of-type {
-        margin-right: 8rem;
-      }
+    p:first-of-type {
+      margin-right: 8rem;
     }
+
+    // &nth-child(1) {
+    //   p {
+    //     margin-right: 8rem;
+    //   }
+    // }
   }
 }
